2005-11-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Rename tx_srfeuserregister_pi1_css_tmpl.tmpl to tx_srfeuserregister_pi1_css_tmpl.html
	* Correctly display all data fields in email messages in css-styled template.
	* Correct error when entering multiple lines in a textarea field.
	* Correct country onChange handler in css-styled template
	* Remove updateForm JavaScript from preview screens in css-styled template.
	* New constants and setup to configure the administrative review process (in css-styled template).
	* Further adjustments to the html template for the administrative review process (in css-styled template).

2005-11-07  Sebastian Roth <sebastian.roth@c-qube.com>
	* Bugfixing.

2005-11-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Additional html subparts in the css-styled template for the administrative review process (work in progress).

2005-11-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Adding some new subparts for the administrative review process (work in progress).

2005-11-04  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
	* Restructure the extension with two Static Templates: Old Style and CSS-styled. One static template must be added to the TS template after extension installation.
	* Add label tag on all form fields in css-styled html template
	* Prefix all field ids with tx-srfeuserregister-pi1- in css-styled html template
	* Generate field ids for all TCA-driven fields
	* Small adjustments to locallang and html template files
	* Addition of scripts folder and elimination of name attribute on form tags in css-styled template
	* Adjustments to css inclusion in html emails in css-styled template and addition of css file
	* Remove attributes from the body tags of html emails in css-styled template
	* Change doctype declararation in html emails in css-styled template
	
2005-11-02  Sebastian Roth <sebastian.roth@c-qube.com>